--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,18 @@ node_js:
   - "iojs"
 
 services: memcache
-env: MEMCACHED__HOST=localhost
-env: MEMCACHED__PORT=11213
+env:
+  - MEMCACHED__HOST=localhost
+  - MEMCACHED__PORT=11213
 
 before_script:
-- memcached -p 11213 -d
+ - memcached -p 11213 -d
 
 before_install:
-  - npm install -g codeclimate-test-reporter
+ - npm install -g codeclimate-test-reporter
 
 script:
-- npm run-script coverage
+ - npm run-script coverage
 
 after_script:
-- CODECLIMATE_REPO_TOKEN=fbb3472e001d0718f7ead2124f20e7487f228891d3d5710a83b73589f35290bb codeclimate-test-reporter < coverage/lcov.info
+ - CODECLIMATE_REPO_TOKEN=fbb3472e001d0718f7ead2124f20e7487f228891d3d5710a83b73589f35290bb codeclimate-test-reporter < coverage/lcov.info
