--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
   "name": "memqueue",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "This library is an implementation of a queue with memcached",
   "main": "index.js",
   "keywords": [
-      "memcache",
-      "memcached",
-      "queue",
-      "cache",
-      "memory",
-      "nachonerd",
-      "memqueue"
+    "memcache",
+    "memcached",
+    "queue",
+    "cache",
+    "memory",
+    "nachonerd",
+    "memqueue"
   ],
   "scripts": {
     "test": "mocha $(find test -name '*.test.js')",
     "coverage": "istanbul cover _mocha $(find test -name '*.test.js')",
-    "example": "node examples/index.js"
+    "example": "node examples/index.js",
+    "doc": "grunt clean && grunt jsdoc2md"
   },
-  "repository" : {
-      "type" : "git",
-      "url" : "https://github.com/nachonerd/memqueue.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nachonerd/memqueue.git"
   },
   "dependencies": {
     "memcached": "2.2.x"
   },
   "devDependencies": {
+    "benchmark": "*",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-jsdoc-to-markdown": "^1.2.0",
+    "istanbul": "*",
     "mocha": "*",
     "should": "*",
-    "sinon": "*",
-    "istanbul": "*",
-    "benchmark": "*"
+    "sinon": "*"
   },
   "author": "Ignacio R. Galieri <irgalieri@gmail.com> (http://elnachonerd.com/)",
   "license": "GPL-3.0",
