--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memqueue",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This library is an implementation of a queue with memcached",
   "main": "index.js",
   "keywords": [
@@ -32,6 +32,7 @@
     "grunt-jsdoc-to-markdown": "^1.2.0",
     "istanbul": "*",
     "mocha": "*",
+    "pre-commit": "^1.1.2",
     "should": "*",
     "sinon": "*"
   },
@@ -40,5 +41,8 @@
   "bugs": {
     "url": "https://github.com/nachonerd/memqueue/issues"
   },
-  "homepage": "https://github.com/nachonerd/memqueue"
+  "homepage": "https://github.com/nachonerd/memqueue",
+  "pre-commit": [
+    "coverage"
+  ]
 }
